# BEVDet

./: .gitignore  README.md
bevdet/configs/bevdet/: bevdet4d-r50-depth-cbgs.py
docker/: Dockerfile  bash.sh  docker-compose.yml  down.sh  setup.sh  up.sh
script/: bevdet.sh  compile_img_nn.sh  setup.sh
src/cpp/bev_pool_v2/: test.cpp
src/cpp/runtime/: CMakeLists.txt  common.hpp  docker-compose.yml  download.sh  main.cpp
src/cpp/runtime/Core/: Service.cpp  Service.hpp  ServiceWorker.cpp  ServiceWorker.hpp
src/cpp/runtime/Service/: BEV4DConcat.cpp  BEV4DConcat.hpp  BEV4DShift.cpp  BEV4DShift.hpp  BEVEncoder.cpp  BEVEncoder.hpp  BEVPool.cpp  BEVPool.hpp  BatchSpliter.cpp  BatchSpliter.hpp  CMDParser.cpp  CMDParser.hpp  DepthNetPost.cpp  DepthNetPost.hpp  TCPSocket.cpp  TCPSocket.hpp  TopicLogger.cpp  TopicLogger.hpp  Topics.hpp  VehicleData.cpp  VehicleData.hpp
src/cpp/runtime/utils/: ServiceSync.cpp  ServiceSync.hpp  tester.hpp  utils.cpp  utils.hpp
src/cpp/runtime/x340_rt/: types.h
src/cpp/runtime/x340_rt/api/c/: x340_rt.h  x340_rt_grpc.cpp  x340_rt_grpc.h
src/cpp/runtime/x340_rt/emulator/lib/: emul.cpp  emul.hpp  x330.hpp
src/cpp/runtime/x340_rt/emulator/x330_umd/: x330_regmap.cpp  x330_regmap.h  x330_umd.cpp  x330_umd.hpp  x330_umd_asic.cpp  x330_umd_asic.hpp
src/python/: export_image_network.py  single_infer_test.py
src/python/bevdet_vis_server/: det_drawer.py  server.py
src/python/bevdet_vis_server/vis_utils/: vis.py
src/python/model_extractor/: cps_extractor.py  utils.py
src/python/utils/: vis.py
(+2 files in other folders)
